HTTP_Routing/2.31_HTTPCORS_MethodsHeaders/gw-http-route_iRule.yaml
# 2.31 iRule 우회. preflight(OPTIONS+Origin+ACR-Method) → 204 + YAML 목록 스탬프.
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class
  addresses:
    - type: IPAddress
      value: 40.30.20.20
  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: HTTPRoute
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cors-methods-headers-irule-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener
  hostnames:
    - coffee.f5bnk.com
  rules:
    - backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
